--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,3 +163,46 @@
   overflow: hidden;
   transition: max-height 0.5s ease-out;
 }
+
+#sliderHosting {
+  background: transparent;
+  height: auto;
+  /* margin: auto; */
+  overflow: hidden;
+  position: relative;
+  width: 50%;
+}
+
+#sliderHosting::before, #sliderHosting::after {
+  background: linear-gradient(to right, #ffffff00 0%, rgba(255, 255, 255, 0) 100%);
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 100px;
+  z-index: 2;
+}
+
+#sliderHosting::after {
+  right: 0;
+  top: 0;
+  -webkit-transform: rotateZ(180deg);
+  transform: rotateZ(180deg);
+}
+
+#sliderHosting::before {
+  left: 0;
+  top: 0;
+}
+
+#sliderHosting #slide-track {
+  animation: scroll 30s linear infinite;
+  animation-duration: 20s;
+  display: flex;
+  width: auto;
+
+}
+
+
+#sliderHosting #slide-track:hover {
+  animation-play-state: paused;
+}
